fix alignment

--- a/client/src/dashboard/styles/dashboard/_dashboard.scss
+++ b/client/src/dashboard/styles/dashboard/_dashboard.scss
@@ -281,9 +281,15 @@
   }
 }
 
-.title-links {
-  margin-right: -15px;
+.dashboard-name {
   margin-left: -15px;
+}
+
+.title-links {
+
+  .aus-width-one-whole {
+    margin-left: -15px;
+  }
 
   a {
     display:block;
